# OpenAPIs/swagger.json
@@ -1512,6 +1512,9 @@
           "receiveEmailNotificationFromSms": {
             "type": "boolean"
           },
+          "emailIsVerified": {
+            "type": "boolean"
+          },
           "created": {
             "type": "string",
             "format": "date-time"
@@ -1552,6 +1555,9 @@
           },
           "receiveEmailNotificationFromSms": {
             "type": "boolean"
+          },
+          "emailIsVerified": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
@@ -1589,6 +1595,9 @@
             "type": "string"
           },
           "receiveEmailNotificationFromSms": {
+            "type": "boolean"
+          },
+          "emailIsVerified": {
             "type": "boolean"
           }
         },
